objects/SCP_Certa_GC__Hito_Relevante_2__c.object
<CustomObject>
    <fields>
        <fullName>SCP_Certa_GC__Categoria__c</fullName>
        <label>Categoria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vencimiento Contrato Activo con Nosotros</fullName>
                </value>
                <value>
                    <fullName>Vencimiento Contrato Activo con la Competencia</fullName>
                </value>
                <value>
                    <fullName>Publicación RFP Comunicaciones</fullName>
                </value>
                <value>
                    <fullName>Publicación RFP TI</fullName>
                </value>
                <value>
                    <fullName>Evento Para Nuestros Clientes</fullName>
                </value>
                <value>
                    <fullName>Evento Relevante de la Industria</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>Vencimiento Contrato del Servicio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Contenedor_de_hito__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contenedor de hito2</label>
        <referenceTo>SCP_Certa_GC__Contenedor_de_hito2__c</referenceTo>
        <relationshipLabel>Hitos Relevantes 2</relationshipLabel>
        <relationshipName>Hitos_Relevantes_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Descripcion__c</fullName>
        <label>Descripcion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Fecha__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <label>Hito Relevante 2</label>
    <nameField>
        <label>Nombre de Hito Relevante 2</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hitos Relevantes 2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>